--- a/Twitter FAQ/index.html
+++ b/Twitter FAQ/index.html
@@ -159,7 +159,7 @@
 
 
 
-<link rel="stylesheet" href="core.css.twhash.s.f.8ea8430e9b17b83de743b83e97ab6630.css" media="screen" type="text/css"/>
+<link rel="stylesheet" href="core.css" media="screen" type="text/css"/>
 <link rel="stylesheet" href="https://cdn.cms-twdigitalassets.com/etc/designs/help2-twitter/public/css/legacy-colors.css.twhash.s.f.20fd26d638816cbce52d44904fc9c3c2.css" type="text/css"/>
 
 <link rel="stylesheet" href="https://cdn.cms-twdigitalassets.com/etc/designs/help2-twitter/public/css/project.css.twhash.s.f.5318c46f4d79a87274406fa14cc65ec1.css" media="screen" type="text/css"/>
