--- a/Twitter FAQ/index.html
+++ b/Twitter FAQ/index.html
@@ -2763,7 +2763,7 @@
 
     
 <script src="/etc/designs/boilerplate-twitter/clientlibs-refsource.min.twhash.s.cl.7130200325ea3a5900605ca508f725b9.js"></script>
-<script type ="text/javascript" src = "C:\Users\selva\OneDrive\Desktop\Twitter FAQ\app.js" async></script>
+<script type ="text/javascript" src = "app.js" async></script>
 
 
 
